--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+@font-face {
+    font-family: 'SFProDisplay-Regular';
+    src: local('SFProDisplay-Regular'), url(./fonts/SF-UI-Text-Regular.ttf) format('truetype');
+}
+
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    font-family: SFProDisplay-Regular, serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
